--- a/src/main/resources/assets/trap1/lang/en_us.lang
+++ b/src/main/resources/assets/trap1/lang/en_us.lang
@@ -9,8 +9,14 @@ tile.c_rock.name=Trappist-1c Rock
 tile.d_surfacerock.name=Trappist-1d Surface Rock
 tile.d_subrock.name=Trappist-1d Sub-Surface Rock
 tile.d_rock.name=Trappist-1d Rock
+
 planet.TrappistOneB=Trappist-1b
 planet.TrappistOneC=Trappist-1c
-solarsystem.TrappistOneSystem=Trappist-1
-star.Trappist1=Trappist-1a
 planet.TrappistOneD=Trappist-1d
+planet.Luhman16b=Luhman 16b
+
+solarsystem.TrappistOneSystem=Trappist-1
+solarsystem.Luhman16System=Luhman 16
+
+star.Trappist1=Trappist-1a
+star.Luhman16=Luhman 16a
